--- a/essential_meals_project/templates/custom_recipe.html
+++ b/essential_meals_project/templates/custom_recipe.html
@@ -7,7 +7,7 @@
         <a class="nav-link" href="{% url 'em_search' %}">Search</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Calendar</a>
+        <a class="nav-link" href="{% url 'em_calendar' %}">Calendar</a>
     </li>
 {% endblock %}
 
@@ -105,6 +105,19 @@
 					{% else %}
 					    <p>{{ recipe.preparation }}</p><p></p>
 					{% endif %}
+					<h4>Nutrition</h4>
+                    {% if fromAPI %}
+                        <p>
+                            Calories: {{ recipe.calories }}
+                            Sodium: {{ recipe.sodium }}
+                        </p>
+
+                    {% else %}
+                        <p>
+                            Nutritional information for this recipe has not been added
+                        </p>
+                    {% endif %}
+                
 					<p>Created By {{ recipe.author }} </p>
 				</div>
 			</div>
